# notemama

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.xAxlBc  Main.qml  ToolSettingsPopup.qml  canvas.cpp  canvas.h  main.cpp  svgparser.cpp  svgparser.h
canvas/: canvas.cpp  canvas.h  canvasrenderer.cpp  canvasrenderer.h
canvas/items/: canvasitem.cpp  canvasitem.h  spinnercanvasitem.cpp  spinnercanvasitem.h  vectorpathcanvasitem.cpp  vectorpathcanvasitem.h
canvas/tools/: curvepentool.cpp  curvepentool.h  fakedrawtool.cpp  fakedrawtool.h  pentool.cpp  pentool.h  tool.cpp  tool.h
scene/: scene.cpp  scene.h
scene/canvas/: canvas.cpp  canvas.h  canvasrenderer.cpp  canvasrenderer.h
scene/canvas/background/: background.cpp  background.h
scene/canvas/tools/: curvepentool.cpp  curvepentool.h  fakedrawtool.cpp  fakedrawtool.h  pentool.cpp  pentool.h  selecttool.cpp  selecttool.h  tool.cpp  tool.h
scene/items/: pointsceneitem.cpp  pointsceneitem.h  sceneitem.cpp  sceneitem.h  spinnersceneitem.cpp  spinnersceneitem.h  vectorpathsceneitem.cpp  vectorpathsceneitem.h
scene/nddgenerator/: nddgenerator.cpp  nddgenerator.h
scene/parsers/: pdfparserdeclarative.cpp  pdfparserdeclarative.h
scene/parsers/pdfparser/: custombuffer.hpp  customfunction.cpp  customfunction.h  customtypespdf.h  pdfparser.cpp  pdfparser.h
scene/parsers/pdfparser2/src/: pdfparser.cpp  pdfparser.h
scene/parsers/pdfparser2/src/custombuffer/: custombuffer.hpp
scene/parsers/pdfparser2/src/customfunctions/: customfunction.cpp  customfunction.h
scene/remote/: remoteclient.cpp  remoteclient.h  remoteserver.cpp  remoteserver.h
shaders/: background.frag  background.vert  color.vert
